--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <style>
     body {
-      background-color: #2b0033; /* ハロウィンぽい背景色 */
-      color: #fffacd;
+      background: url('haikei.png') no-repeat center center fixed;
+      background-size: cover;
       font-family: 'Yusei Magic', sans-serif;
       text-align: center;
       margin: 0;
@@ -126,3 +126,4 @@
 
 </body>
 </html>
+
