--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start; /* 上寄せ */
+      justify-content: center; /* 真ん中寄せ */
       box-sizing: border-box;
-      padding-top: 120px; /* 上の余白を設定 */
+      padding-top: 40px; /* 少しだけ上に寄せる */
     }
 
     h1 {
